kubernetes/cilium-config/adguardhome-sync/aghs-gateway.yml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: aghs-gateway
  namespace: default
spec:
  gatewayClassName: cilium
  listeners:
    - hostname: "aghs.reprogle.org"
      name: aghs-listener
      port: 80
      protocol: HTTP
      allowedRoutes:
        namespaces:
          from: All
